# rusty-lang-tool

./: .editorconfig  .gitignore  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  LICENSES.md  NOTICE  README.md
.cargo/: config.toml
.claude/skills/add-language/: SKILL.md
.githooks/: pre-push
.github/: dependabot.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  deploy-pages.yml  nightly.yml  release-artifacts.yml  sync-upstream.yml
crates/rlt-cli/: Cargo.toml
crates/rlt-cli/src/: lib.rs  main.rs  oracle_score.rs
crates/rlt-cli/tests/: oracle.rs
crates/rlt-convert/: Cargo.toml
crates/rlt-convert/src/: disambig.rs  lib.rs  lt_schema.rs  main.rs  morfologik.rs
crates/rlt-core/: Cargo.toml
crates/rlt-core/src/: disambig.rs  lib.rs  matcher.rs  spell.rs
crates/rlt-engine/: Cargo.toml
crates/rlt-engine/src/: lib.rs
crates/rlt-engine/tests/: tokenize.rs
crates/rlt-ir/: Cargo.toml
crates/rlt-ir/src/: lib.rs
crates/rlt-lang/: Cargo.toml
crates/rlt-lang/src/: lib.rs
crates/rlt-native/: Cargo.toml
crates/rlt-native/benches/: engine.rs
crates/rlt-native/examples/: leak_probe.rs
crates/rlt-native/src/: compound.rs  lib.rs  tagger.rs
crates/rlt-native/tests/: differential.rs
crates/rlt-tagger/: Cargo.toml
crates/rlt-tagger/src/: infer.rs  lib.rs
crates/rlt-wasm/: Cargo.toml
crates/rlt-wasm/src/: lib.rs
data/: en-closed-class.tsv
docs/: adaptability.md  language-coherence.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: confusion_check.rs  confusion_rkyv.rs  disambig_apply.rs  disambig_rkyv.rs  engine_analyze.rs  engine_analyze_ar.rs  engine_analyze_de.rs  engine_analyze_es.rs  engine_analyze_fr.rs  engine_analyze_it.rs  engine_analyze_ru.rs  ir_match.rs  ir_rkyv.rs  spell_edits1.rs  tagger_load.rs
fuzz/src/: lib.rs
lang-manifests/: ar.json  de.json  en.json  es.json  fr.json  it.json  ru.json
pipeline/: README.md  pyproject.toml
pipeline/rlt_pipeline/: evaluate.py  export.py  fetch.py  inspect_model.py  paths.py  quantize.py
resources/: README.md
scripts/: leak_wasm.mjs  smoke_node.mjs
tests/fixtures/: essay.txt
tools/: NgramDump.java
web/: README.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
web/scripts/: stage-artifacts.mjs
web/src/: app.css  app.html  vite-env.d.ts
web/src/lib/: config.ts
web/src/lib/artifacts/: store.ts  types.test.ts  types.ts
web/src/lib/checker/: checker.worker.ts  manager.ts  spanmap.test.ts  spanmap.ts  types.ts  wasm.ts  worker-client.ts  worker-protocol.ts
web/src/lib/editor/: codeactions.ts  diagnostics.ts  fixes.ts  monaco.ts
web/src/lib/ui/: DownloadProgress.svelte  DownloadTrackToggle.svelte  ErrorBanner.svelte  FindingsPanel.svelte  LanguagePicker.svelte
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
xtask/: Cargo.toml
xtask/src/: main.rs
