[workspace]
resolver = "2"
members = [
    "crates/rlt-ir",
    "crates/rlt-lang",
    "crates/rlt-convert",
    "crates/rlt-engine",
    "crates/rlt-native",
    "crates/rlt-core",
    "crates/rlt-tagger",
    "crates/rlt-cli",
    "crates/rlt-wasm",
    "xtask",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/appulsauce/rusty-lang-tool"
authors = ["Kai Niermann <kai.niermann@googlemail.com>"]

# Shared dependency versions. Individual crates opt in via `dep.workspace = true`.
# Versions reflect the crates.io survey in the design discussion (current/maintained).
[workspace.dependencies]
# IR / zero-copy artifact
rkyv = "0.8"
zerocopy = "0.8"
# XML + schema codegen (converter)
quick-xml = "0.40"
xsd-parser = "1.5"
# `quick-xml` feature enables the quick_xml + xml modules the generated deserializers use.
xsd-parser-types = { version = "0.2", features = ["quick-xml"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
# Engine: vendored-via-dependency nlprule. default-features off + regex-fancy keeps it
# pure-Rust so it compiles to wasm32 (the onig default pulls in a C lib that does not).
nlprule = { version = "0.6.4", default-features = false, features = ["regex-fancy"] }
# Pattern matching (engine)
regex-automata = "0.4"
fancy-regex = "0.18"
aho-corasick = "1.1"
# Dictionaries / FSA
fst = "0.4"
# CLI
clap = { version = "4", features = ["derive"] }
# WASM glue
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
# Errors + logging (per global guidelines)
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Test oracle
datatest-stable = "0.3"
insta = "1"
# Benchmarking (rlt-native: NativeEngine vs nlprule).
criterion = "0.5"
# Structure-aware fuzzing (optional `arbitrary` feature on rlt-ir / rlt-core; used by `fuzz/`).
arbitrary = { version = "1", features = ["derive"] }
# L4 neural tagger (rlt-tagger): pure-Rust ONNX inference + RoBERTa tokenization. Both compile to
# native AND wasm32 (one feature set). `tokenizers` default features pull C++ (esaxx); unstable_wasm
# keeps it pure-Rust.
rten = "0.24"
rten-tensor = "0.24"
tokenizers = { version = "0.23", default-features = false, features = ["unstable_wasm"] }
serde_json = "1"
# Word-level diff for the L4 iterative decoder (original vs corrected -> span-accurate edits).
similar = "3"
# Native engine (rlt-native): LanguageTool sentence segmentation (the POS tagger FSA reuses `fst`
# above). `from_xml` enables loading segment.srx. Pure-Rust, compiles to wasm32.
srx = { version = "0.1", features = ["from_xml"] }
# Internal crates
rlt-ir = { path = "crates/rlt-ir" }
rlt-lang = { path = "crates/rlt-lang" }
rlt-engine = { path = "crates/rlt-engine" }
rlt-core = { path = "crates/rlt-core" }
rlt-convert = { path = "crates/rlt-convert" }
rlt-tagger = { path = "crates/rlt-tagger" }
rlt-native = { path = "crates/rlt-native" }

# Pedantic clippy baseline, applied across the workspace via `[lints] workspace = true`.
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Proper nouns (LanguageTool, nlprule, …) and product names recur throughout the docs; this
# pedantic lint false-positives on them constantly. Pragmatic allow per project guidelines.
doc_markdown = "allow"

[workspace.lints.rust]
unsafe_code = "warn"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
