[package]
name = "rlt-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

# Detached from the parent workspace so libfuzzer-sys / sanitizer deps never enter normal builds.
[workspace]

[dependencies]
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }
arbitrary = { version = "1", features = ["derive"] }
rlt-ir = { path = "../crates/rlt-ir", features = ["arbitrary"] }
rlt-core = { path = "../crates/rlt-core", features = ["arbitrary"] }
rlt-native = { path = "../crates/rlt-native" }
rlt-lang = { path = "../crates/rlt-lang" }

[profile.release]
debug = 1

# Untrusted-input targets: the runtime loads these rkyv blobs from disk/network, so malformed
# bytes must fail gracefully (the validated `from_bytes` path), never panic or corrupt memory.
[[bin]]
name = "ir_rkyv"
path = "fuzz_targets/ir_rkyv.rs"
test = false
doc = false
bench = false

[[bin]]
name = "confusion_rkyv"
path = "fuzz_targets/confusion_rkyv.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tagger_load"
path = "fuzz_targets/tagger_load.rs"
test = false
doc = false
bench = false

[[bin]]
name = "disambig_rkyv"
path = "fuzz_targets/disambig_rkyv.rs"
test = false
doc = false
bench = false

# Structure-aware targets: exercise the matcher / confusion logic (regex compile, backtracking,
# byte-offset suggestion rendering) over arbitrary rules + token graphs.
[[bin]]
name = "ir_match"
path = "fuzz_targets/ir_match.rs"
test = false
doc = false
bench = false

[[bin]]
name = "confusion_check"
path = "fuzz_targets/confusion_check.rs"
test = false
doc = false
bench = false

# Native engine: span arithmetic over arbitrary Unicode, and disambiguation over arbitrary rules.
[[bin]]
name = "engine_analyze"
path = "fuzz_targets/engine_analyze.rs"
test = false
doc = false
bench = false

[[bin]]
name = "engine_analyze_de"
path = "fuzz_targets/engine_analyze_de.rs"
test = false
doc = false
bench = false

[[bin]]
name = "engine_analyze_ru"
path = "fuzz_targets/engine_analyze_ru.rs"
test = false
doc = false
bench = false

[[bin]]
name = "spell_edits1"
path = "fuzz_targets/spell_edits1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "engine_analyze_ar"
path = "fuzz_targets/engine_analyze_ar.rs"
test = false
doc = false
bench = false

[[bin]]
name = "disambig_apply"
path = "fuzz_targets/disambig_apply.rs"
test = false
doc = false
bench = false
