[package]
name = "xtask"
description = "Build/orchestration tasks for rusty-lang-tool: fetch-lt, gen-schema, build-blob, build-wasm, run-oracle."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
clap.workspace = true
anyhow.workspace = true
# Schema codegen lives here (not in any runtime crate) so the heavy generator dependency never
# touches normal builds. `gen-schema` regenerates the committed bindings on an LT bump.
xsd-parser = "1.5"

[lints]
workspace = true
