[package]
name = "xtask"
description = "Build/orchestration tasks for rusty-lang-tool: fetch-lt, gen-schema, build-blob, build-wasm, run-oracle."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
clap.workspace = true
anyhow.workspace = true
# Schema codegen lives here (not in any runtime crate) so the heavy generator dependency never
# touches normal builds. `gen-schema` regenerates the committed bindings on an LT bump.
xsd-parser = "1.5"
# adapt-sweep: persist per-version results (resumable) + parse score-oracle's JSON.
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
# build-tagger: assemble the native engine's POS dictionary (AGID + remap.awk → fst artifact).
rlt-native.workspace = true
# build-disambig: lower disambiguation.xml → the disambig.rkyv artifact.
rlt-convert.workspace = true
# audit-rules: run the L2 IR matcher over the example corpus to histogram per-rule firing rates.
rlt-core.workspace = true
# Per-language config: artifact paths + POS-dict Maven coordinates + LT module paths.
rlt-lang.workspace = true
unicode-properties = "0.1.4"
sha2 = "0.11.0"
# web-manifest: gzip the served artifacts (the browser decompresses via the native DecompressionStream).
flate2 = "1.0"

[lints]
workspace = true
