[package]
name = "rlt-convert"
description = "Offline converter: lowers LanguageTool grammar.xml/disambiguation.xml into the rlt-ir, compiles dictionaries, and emits a zero-copy rkyv artifact."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "rlt_convert"
path = "src/lib.rs"

[[bin]]
name = "rlt-convert"
path = "src/main.rs"

[dependencies]
rlt-ir.workspace = true
# Generated bindings (src/lt_schema.rs) deserialize via these; quick-xml is referenced by the
# generated deserializer impls. The heavy `xsd-parser` generator lives in xtask, not here.
xsd-parser-types.workspace = true
quick-xml.workspace = true
regex.workspace = true
rkyv.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
