[package]
name = "rlt-convert"
description = "Offline converter: lowers LanguageTool grammar.xml/disambiguation.xml into the rlt-ir, compiles dictionaries, and emits a zero-copy rkyv artifact."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "rlt_convert"
path = "src/lib.rs"

[[bin]]
name = "rlt-convert"
path = "src/main.rs"

[dependencies]
rlt-ir.workspace = true
# Generated bindings (src/lt_schema.rs) deserialize via these; quick-xml is referenced by the
# generated deserializer impls. The heavy `xsd-parser` generator lives in xtask, not here.
xsd-parser-types.workspace = true
# `serialize` enables quick-xml's serde support — used to deserialize disambiguation.xml (which has no
# XSD, so the generated bindings don't cover its `<disambig>` element) into a hand-written serde model.
# `overlapped-lists` buffers non-contiguous repeated elements (rulegroups interleaved with bare rules).
quick-xml = { workspace = true, features = ["serialize", "overlapped-lists"] }
serde = { workspace = true }
regex.workspace = true
rkyv.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
encoding_rs = "0.8.35"

[lints]
workspace = true
