[package]
name = "rlt-engine"
description = "Linguistic analysis engine implementing rlt-core's Engine trait, backed by a vendored-via-dependency nlprule tokenizer/tagger."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
rlt-core.workspace = true
nlprule.workspace = true
thiserror.workspace = true

[lints]
workspace = true
