[package]
name = "rlt-ir"
description = "Sealed intermediate representation for LanguageTool rule constructs, shared by the converter (writer) and core (reader)."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
rkyv.workspace = true
serde.workspace = true
# Optional: `Arbitrary` impls for the IR types, enabled only by the fuzz crate (structure-aware
# fuzzing of the matcher / confusion checker). Kept out of normal/runtime builds.
arbitrary = { workspace = true, optional = true }

[features]
# Derive `arbitrary::Arbitrary` on the IR types for structure-aware fuzzing.
arbitrary = ["dep:arbitrary"]

[lints]
workspace = true
