[package]
name = "rlt-native"
description = "Native analysis engine: LanguageTool sentence segmentation (srx) + word tokenization + FST POS tagging + disambiguation, behind rlt_core::Engine. Replaces the vendored nlprule."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
rlt-core.workspace = true
# LanguageTool sentence segmentation from segment.srx (pure Rust, wasm-ok).
srx.workspace = true
# The POS tagger FSA (inflected -> lemma+tags); also backs is_known.
fst.workspace = true
serde = { workspace = true }
thiserror.workspace = true

[lints]
workspace = true
