[package]
name = "rlt-tagger"
description = "L4 neural edit-tagger (GECToR-style): decodes per-word edit tags into grammar diagnostics, behind a backend-agnostic TagSource seam."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
rlt-core.workspace = true
serde = { workspace = true }
thiserror.workspace = true

[lints]
workspace = true
