[package]
name = "rlt-tagger"
description = "L4 neural edit-tagger (GECToR-style): decodes per-word edit tags into grammar diagnostics, behind a backend-agnostic TagSource seam."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
rlt-core.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
# Pure-Rust ONNX inference + RoBERTa tokenization (native + wasm32, one feature set).
rten.workspace = true
rten-tensor.workspace = true
tokenizers.workspace = true

[lints]
workspace = true
