[package]
name = "rlt-wasm"
description = "WebAssembly surface: exposes rlt-core's checker to JS via wasm-bindgen. Built with wasm-pack."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# `nlprule` (default) keeps the `RltChecker::new`/`with_neural` constructors backed by nlprule's
# prebuilt binaries. Build with `--no-default-features` for a pure-native bundle (the `with_native*`
# constructors only) that drops the nlprule crate + its 11.6 MB binary entirely.
default = ["nlprule"]
nlprule = ["dep:rlt-engine"]

[dependencies]
rlt-core.workspace = true
rlt-engine = { workspace = true, optional = true }
rlt-native.workspace = true
rlt-lang.workspace = true
rlt-tagger.workspace = true
wasm-bindgen.workspace = true
serde-wasm-bindgen.workspace = true
console_error_panic_hook.workspace = true
# Decompress-only (no encoder) + `std` for the Read/Write-based `BrotliDecompress`; no `unsafe`
# feature, keeping the dep all-safe. Powers `brotli_decompress` for the web Fast (beta) track.
brotli-decompressor = { version = "5.0.3", default-features = false, features = ["std"] }

[lints]
workspace = true
